Change history
--------------

Release Candidate 3
===================

- Applied Lee Henson's patch adding generic overloads to ReflectionHelper

- Added a few more RenderView overloads that take a mimeType to configure the Response.ContentType

- If the controller cannot be found, MR searches for a special rescue "rescues/404" before throwing throwing an exception.

- If an action could not be found, we go through normal path an use a general rescue if it can be found for the controller. 

- UrlHelper change: Now if the param encode wasn't set, UrlHelper assumes it's true.

- Applied patch by Oleg Snurnikov fixing MR-319
  "MockResponse - basic implementation of Redirect, Write, BinaryWrite and Clear overloads"

- Applied patch by Chirs Ortman fixing MR-296
  "Dont get validation summary when binding with AR attribute but controller inherits smart dispatcher controller"

- Applied patch by Rafael Teixeira fixing MR-298
  "ColumnRenderer with an empty enumeration still renders table start and end sections"

- Fixed MR-300
  "DataBindAttribute in a ARSmartDispatcherController inherit the behavior from ARDataBinder"

- Applied minor patch by James Su fixing MR-303
  "Behavior is not consistent between FormToAttributed and LinkToAttributed in HtmlHelper"

- Applied goodwill's patch adding cookie support to BaseControllerTest MR-304

- Applied goodwill's patch fixing MR-305
  "fValidate fix a bug on unassociated label for element"

- Applied Oleg Snurnikov's patch fixing MR-306
  "PrototypeWebValidator - regular expression validation"

- Fixed MR-311 
  "The '\' character in templates goes unescaped when processed via NJS"

- The DefaultUrlBuilder now accepts a basePath parameter, which basically overrides the path information.

- Fixed MR-317
  "ARDataBind handles BelongsTo attribute in Nested component incorrectly."

- FlashBinderAttribute was removed as I doesnt work with the new 
  MonoRail design (changed to make the cache support work)
